teacher and student mgrs done